--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
 	<link rel="stylesheet" href="./style.css">
 </head>
 <body>
-	<div class="box1 box">
+	<div class="box">
 		<div class="content">
 			<div class="image">
 				<img src="./avatar.png" alt="Profile Image">
 			</div>
 			<div class="level">
-				<p>Senior</p>
+				<p>SENIOR</p>
 			</div>
 			<div class="text">
 				<p class="name">Att Lab</p>
 				<p class="title">Frontend Developer</p>
-				<p class="discription">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum, dolor.</p>
+				<p class="discription">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique voluptas aut rem?</p>
 			</div>
 			<div class="icons">
 				<a href="">
